[package]
name = "fib-miden-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miden-vm = { default-features = false, git = "https://github.com/open-rollup/miden-vm-fix-no-std.git", branch = "pallet-open-rollup" }
hex = "0.4"

